--- a/style.css
+++ b/style.css
@@ -13,8 +13,10 @@ body {
 header {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   padding: 2rem 1rem 1rem 1rem;
+  max-width: 800px;
+  width: 100%;
 }
 
 header img {
@@ -26,10 +28,34 @@ header img:hover {
   transform: scale(1.1);
 }
 
+header div {
+  display: flex;
+  gap: 1rem;
+  flex-direction: row;
+}
 header h3 {
   font-size: 1.5rem;
   color: #6a1b9a;
   margin-left: 1rem;
+}
+
+#user {
+  font-size: 0.8rem;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  background-color: #fff;
+  color: #6a1b9a;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease, transform 0.2s ease;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  text-decoration: none;
+}
+
+#user:hover {
+  background-color: #5e35b1;
+  color: #fff;
+  transform: scale(1.05);
 }
 
 main {
