--- a/style.css
+++ b/style.css
@@ -12,11 +12,12 @@ body {
 
 header {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   padding: 2rem 1rem 1rem 1rem;
   max-width: 800px;
   width: 100%;
+  gap: 2rem;
 }
 
 header img {
@@ -54,8 +55,7 @@ header h3 {
 }
 
 #user {
-  font-size: 0.5rem;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem;
   font-size: 1rem;
   background-color: #fff;
   color: #6a1b9a;
@@ -64,6 +64,7 @@ header h3 {
   transition: background-color 0.3s ease, color 0.3s ease, transform 0.2s ease;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   text-decoration: none;
+  min-width: fit-content;
 }
 
 #user:hover {
@@ -113,7 +114,7 @@ label {
 
 #newProblem {
   flex-grow: 1;
-  padding: 0.8rem;
+  padding: 0.8rem 0.5rem;
   font-size: 1rem;
   border: 1px solid #ccc;
   border-radius: 6px;
